created new SQL for crowfunding

--- a/crowdfunding.ipynb
+++ b/crowdfunding.ipynb
@@ -4428,7 +4428,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "49e39d9a",
+   "id": "84a992c5",
    "metadata": {},
    "outputs": [
     {
@@ -4516,7 +4516,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b6818002",
+   "id": "44c04904",
    "metadata": {},
    "outputs": [
     {
@@ -4554,7 +4554,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "1f244c1f",
+   "id": "2334444a",
    "metadata": {},
    "outputs": [
     {
@@ -4584,7 +4584,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "c864cf2e",
+   "id": "783d0936",
    "metadata": {},
    "outputs": [
     {
@@ -4671,7 +4671,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "5acf1ff3",
+   "id": "c0f1de02",
    "metadata": {},
    "outputs": [
     {
@@ -4698,7 +4698,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "60abf703",
+   "id": "3d5ce504",
    "metadata": {},
    "outputs": [
     {
@@ -4738,7 +4738,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "e986503a",
+   "id": "d5a8d95e",
    "metadata": {},
    "outputs": [
     {
@@ -4829,7 +4829,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "2c891828",
+   "id": "c4dc91d9",
    "metadata": {},
    "outputs": [
     {
@@ -4921,14 +4921,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "02a4aa52",
+   "execution_count": 63,
+   "id": "6c72b95b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file\n",
-    "# contacts_df.to_csv(\"contacts.csv\", encoding='utf8', index=False)"
+    "contacts_df.to_csv(\"contacts.csv\", encoding='utf8', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9be368fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
